--- a/navy-apps/.gitignore
+++ b/navy-apps/.gitignore
@@ -27,3 +27,4 @@ build/
 !/fsimg/share/music/rhythm/empty.ogg
 !/fsimg/share/pictures/projectn.bmp
 !/fsimg/share/slides/*.bmp
+!/fsimg/share/games/empty
